--- a/index.css
+++ b/index.css
@@ -1,9 +1,20 @@
 body {
-    background-image: url("station.jpg");
+    background-image: url("dolls.jpg");
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
+}
+
+.box {
+   background: pink;
+   max-width: 55%;
+   margin-top: 5rem;
+   margin-left: auto;
+   margin-right: auto;
+   border: 3px solid black;
+   border-radius: 10px;
+
 }
 
 h1 {
@@ -29,10 +40,10 @@ button {
 }
 
 #increment-btn {
-    background: darkred;
+    background: purple;
 }
 
 #save-btn {
-    background: darkgreen;
+    background: olive;
 }
 
